# fly-cat

./: .gitignore  CLAUDE.md  DONE.md  README.md  README.zh-CN.md  TODO.md  index.html  meta.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/docs/: file_contents.md  gou.md  long_markdown_reader_markdown_rendering.md
.playwright-cli/: page-2026-04-13T06-56-22-897Z.yml  page-2026-04-13T06-57-16-397Z.yml  page-2026-04-13T06-57-31-505Z.yml  page-2026-04-13T06-57-48-522Z.yml  page-2026-04-13T06-58-02-992Z.yml  page-2026-04-13T06-58-19-302Z.yml  page-2026-04-13T07-24-45-114Z.yml  page-2026-04-13T07-24-58-645Z.yml
scripts/: TODO.md  archive-report-lib.d.ts  archive-report-lib.mjs  generate-archive-report.mjs  run-openspec-archive.mjs  run-tauri.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  local_agent.rs  main.rs  mcp.rs  model.rs  render.rs  storage.rs  sync.rs
tests/: archive-report-lib.d.ts  archive-report.test.ts  connection-validation.test.ts  feishu-browser-url.test.ts  image-resolver.test.ts  knowledge-base-tree-loading.test.ts  manifest-store.test.ts  markdown-preview-utils.test.ts  markdown-renderer.test.ts  path-mapper.test.ts  run-tauri.test.ts  sync-engine-recovery.test.ts  sync-failure-presentation.test.ts  sync-planner.test.ts  sync-selection.test.ts  sync-start.test.ts  sync-task-workflow.test.ts  tauri-subtree-selection.e2e.mjs  tree-selection.test.ts  tri-state-checkbox.test.ts
(+717 files in other folders)
