[package]
name = "feishu_docs_sync"
version = "0.1.0"
description = "Feishu Docs Sync desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "feishu_docs_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
