[package]
name = "feishu_docs_sync"
version = "0.1.0"
description = "Feishu Docs Sync desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "feishu_docs_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
ureq = { version = "2", features = ["json"] }
tauri-plugin-oauth = "2.0.0"
tauri-plugin-opener = "2.5.3"
urlencoding = "2.1.3"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
